--- a/formler.tex
+++ b/formler.tex
@@ -45,13 +45,14 @@ I kondensatorer:
 \[ I = \frac{dQ}{dt} = C \frac{dv}{dt} \]
 \[ P = IV = Cv \frac{dv}{dt} \]
 \[ W = \int_{t_0}^t P(t)dt = \int_{t_0}^t Cv \frac{dv}{dt} = C \int_{v(t_0)}^{v(t)} vdv = \frac{C}{2}(v(t)^2 - v(t_0)^2) \]
-\[ W = \frac{Cv^2}{2}, W(t_0) = 0 \]
+\[ W = \frac{Cv^2}{2}, v(t_0) = 0 \]
 \[ v(t) = \frac{1}{C} \int_{t_0}^t I(t)dt + v(t_0) \]
 
 I induktorer:
-\[ v = \frac{dI}{dt} \]
-\[ W = \frac{LI^2}{2} \]
+\[ v = L \frac{dI}{dt} \]
+\[ W = \frac{LI^2}{2}, I(t_0) = 0 \]
 \[ I(t) = \frac{1}{L} \int_{t_0}^t v(t)dt + I(t_0) \]
+\[ P = IV = LI \frac{di}{dt} \]
 
 %% -- %%
 \section{Lagar}
