--- a/verktyg.tex
+++ b/verktyg.tex
@@ -1,4 +1,5 @@
-\subsection*{Node voltage analysis}
+\subsection{Kretsar}
+\subsubsection*{Node voltage analysis}
 Analysera spänningsskillnader gentemot en referensnod (jord eller den nod med flest kopplingar). Lös med ekvationssystem.
 
 \begin{enumerate}
@@ -10,16 +11,16 @@ Analysera spänningsskillnader gentemot en referensnod (jord eller den nod med f
 
 Tips: Räkna $ I_{out} $ som positiv i varje resistor. 
 
-\subsection*{Supernod}
+\subsubsection*{Supernod}
 Spänningskälla som ej är direkt kopplad till referensnoden kan göras om till en supernod. Nodens spänning är källans spänning och båda ändars kopplingar räknas som supernodens kopplingar.
 
-\subsection*{Mesh current analysis}
+\subsubsection*{Mesh current analysis}
 Analysera loopar i en krets (medsols). Applicera KVL på varje loop. Lös med ekvationssystem.
 
-\subsection*{Supermesh}
+\subsubsection*{Supermesh}
 Strömkälla i kretsen. Kombinera loopar in i en större superloop. $ I_{super} = I_1 - I_2 $
 
-\subsection*{Superposition}
+\subsubsection*{Superposition}
 Går endast att applicera på linjära kretsar med flera ström- och/eller spänningskällor. Varje källa kan analyseras separat för att sedan läggas ihop.
 \begin{enumerate}
 	\item Stäng av alla källor förutom en.
