La till nytt och fixade gammalt

--- a/ekvkretsar.tex
+++ b/ekvkretsar.tex
@@ -6,7 +6,7 @@ Kapacitans  $ C_ {eq} = (\sum C_n ^{-1})^{-1} $ \tab (\( C_{eq} = \frac{C_1C_2}{
 \\
 Induktans $ L_{eq} = \sum L_n $
 \\ \\
-Spänningsdelning \tab $ v_{n} = R_nI = \frac{R_n}{R_{eq}} $
+Spänningsdelning \tab $ v_{n} = R_nI = \frac{R_n}{R_{eq}} \cdot v_{total} $
 
 \subsection{Parallellkoppling}
 
@@ -16,9 +16,9 @@ Kapacitans $ C_{eq} = \sum C_n $
 \\
 Induktans $ L_{eq} = (\sum L_n^{-1})^{-1} $ \tab (\(L_{eq} = \frac{L_1L_2}{L_1+L_2}\) vid endast 2 induktorer)
 \\ \\
-Strömdelning \tab $ I_1 = \frac{R_2}{R_1+R_2}, I_2 = \frac{R_1}{R_1+R_2} $
+Strömdelning \tab $ I_1 = \frac{R_2}{R_1+R_2} \cdot I_{total} \quad I_2 = \frac{R_1}{R_1+R_2} \cdot I_{total} $
 
-\subsection{Thévenin equivalent circuit}
+\subsection{Thévenin equivalent circuit (behöver förbättras)}
 
 \begin{figure}[H]
     \centering
@@ -33,7 +33,7 @@ Strömdelning \tab $ I_1 = \frac{R_2}{R_1+R_2}, I_2 = \frac{R_1}{R_1+R_2} $
     \item \(v_{th} = v_{oc}\) and \(R_{th} = R_{eq}\).
 \end{enumerate}
 
-\subsection{Norton equivalent circuit}
+\subsection{Norton equivalent circuit (behöver förbättras)}
 
 \begin{figure}[H]
     \centering
