--- a/ekvkretsar.tex
+++ b/ekvkretsar.tex
@@ -5,6 +5,8 @@ Resistans $ R_{eq} = \sum R_n $
 Kapacitans  $ C_ {eq} = (\sum C_n ^{-1})^{-1} $ \tab (\( C_{eq} = \frac{C_1C_2}{C_1+C_2} \) vid endast 2 kondensatorer)
 \\
 Induktans $ L_{eq} = \sum L_n $
+\\
+Impedans \( Z_{eq} = \sum Z_n \)
 \\ \\
 Spänningsdelning \tab $ v_{n} = R_nI = \frac{R_n}{R_{eq}} \cdot v_{total} $
 
@@ -15,6 +17,8 @@ Resistans $ R_{eq} = (\sum R_n^{-1})^{-1} $ \tab ($ R_{eq} = \frac{R_1R_2}{R_1 +
 Kapacitans $ C_{eq} = \sum C_n $
 \\
 Induktans $ L_{eq} = (\sum L_n^{-1})^{-1} $ \tab (\(L_{eq} = \frac{L_1L_2}{L_1+L_2}\) vid endast 2 induktorer)
+\\
+Impedans \( Z_{eq} = (\sum Z_n^{-1})^{-1} \) \tab (\( Z_{eq} = \frac{Z_1Z_2}{Z_1 + Z_2} \) vid endast 2 impedanser)
 \\ \\
 Strömdelning \tab $ I_1 = \frac{R_2}{R_1+R_2} \cdot I_{total} \quad I_2 = \frac{R_1}{R_1+R_2} \cdot I_{total} $
 
