--- a/ekvkretsar.tex
+++ b/ekvkretsar.tex
@@ -33,7 +33,7 @@ Strömdelning \tab $ I_1 = \frac{R_2}{R_1+R_2} \cdot I_{total} \quad I_2 = \frac
 \begin{enumerate}
     \item Disconnect the load \(R_L\) and replace with an open circuit.
     \item Find the open circuit voltage \(V_{oc}\).
-    \item Find the equivalent resistance \(R_{eq}\) of the network with all independent sources turned off.
+    \item Find the equivalent resistance \(R_{eq}\) of the network with all independent sources turned off. (\(V=0 \rightarrow \) short circuit, \( I=0 \rightarrow \) open circuit)
     \item \(v_{th} = v_{oc}\) and \(R_{th} = R_{eq}\).
 \end{enumerate}
 
@@ -48,7 +48,7 @@ Strömdelning \tab $ I_1 = \frac{R_2}{R_1+R_2} \cdot I_{total} \quad I_2 = \frac
 \begin{enumerate}
     \item Replace the load \(R_L\) with a short circuit.
     \item Find the short circuit current \(I_{sc}\).
-    \item Find the equivalent resistance \(R_{eq}\) of the network with all independent sources turned off.
+    \item Find the equivalent resistance \(R_{eq}\) of the network with all independent sources turned off. (\(V=0 \rightarrow \) short circuit, \( I=0 \rightarrow \) open circuit)
     \item \(I_N = I_{sc}\) and \(R_N = R_{eq}\).
 \end{enumerate}
 
