Even more stuff

--- a/formler.tex
+++ b/formler.tex
@@ -199,6 +199,7 @@ Total work done by external source to increase current from 0 to I in a magnetic
 \[ I_{rms} = \frac{I_m}{\sqrt{2}} \]
 \[ P_{avg} = V_{rms} \cdot I_{rms} = \frac{V^2_{rms}}{R} = I^2_{rms} R \]
 \[ v(t) = V_m \cos(\omega t + \theta) \leftrightarrow V = V_m \phase{\theta} \]
+\[ \textrm{Lagging: } I_m\cos(\omega t - \theta) \textrm{, leading: } I_m\cos(\omega t + \theta) \]
 
 \subsubsection{Notation}
 \[ z = x + jy = |z|(\cos \theta + j \sin \theta) = |z| \phase{\theta} = |z| e^{j \theta} \]
@@ -304,6 +305,7 @@ Resonans uppstår när reaktansen är noll.
 \[ |H(f)|_{dB} = 20\log_{10} \frac{f/f_B}{\sqrt{1 + (f/f_B)^2}} \]
 
 \subsubsection{Second-order lowpass filter}
+\textit{Disclaimer: Might be wrong, I don't know.}
 \begin{figure}[H]
     \centering
         \includegraphics[scale=1]{2nd-order-lowpass.png}
@@ -313,6 +315,7 @@ Resonans uppstår när reaktansen är noll.
 Se avsnitt \hyperref[sec:resonans]{Resonans}.
 
 \subsubsection{Second-order highpass filter}
+\textit{Disclaimer: Might be wrong, I don't know.}
 \begin{figure}[H]
     \centering
         \includegraphics[scale=1]{2nd-order-highpass.png}
